[package]
name = "nyanbot-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serenity]
version = "0.10"
default-features = true
# features = ["framework", "client", "gateway", "rustls_backend", "model"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
