[package]
name = "nyanbot-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
attohttpc = { version = "0.17", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

[dependencies.serenity]
version = "0.10"
default-features = true
# features = ["framework", "client", "gateway", "rustls_backend", "model"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
